# utils-lib-python

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  LICENSE  Pipfile  Readme.md  bld.bat  codecov.bat  codecov.yml  setup.cfg  unit_test.bat
.github/codeql/: codeql-config.yml
.github/workflows/: ci-codecov.yml  ci-gitguardian.yml  ci-project.yml  codeql-analysis.yml  cr-commentator-pytest-coverage.yml  cr-project.yml  cr-pytest.yml  cron-lock-inactive.yaml  pull-request-ci.yml  python-package-pytest.yml  python-pytest-cov-codecov.yml
ci/CheckEncode/: check_encode.py
test/: sample_test.py
tests/: codeql-test.py
tests/convert/: convert_string_test.py
utils/: __init__.py  _version.py  sample.py
utils/convert/: convert_string.py
utils/logging/: _debug.py
