[metadata]
name = utils_lib
version = attr: utils.__VERSION__
description = Collection of general utilies
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/jason40418/utils-lib-python
author = Jason Lin
author_email = jason40418@gmail.com
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = utils-lib, utilities

[options]
packages = find:
python_requires = >=3.10, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
include_package_data = False
package_dir =
    =utils
zip_safe = False

[options.packages.find]
where = utils
